[package]
name = "eph"
version = "0.1.0"
edition = "2024"
authors = ["Lucas McClean <lucas@mcclean.dev>"]
description = "A modal CLI todo built for quick task movement."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasmcclean/eph"
categories = ["command-line-utilities"]
keywords = ["todo", "cli", "terminal"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
toml = "0.9.11"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
